# werkingflow-bridge

./: .dockerignore  .env.example  .gitignore  .stignore  CHANGELOG.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_QUICKSTART.md  DOCKER_STATUS.md  DOCKER_TEST_RESULTS.md  README.md  RESEARCH_ENDPOINT.md  install-docker-wrapper.sh  logs.sh  pyproject.toml  restart-wrappers.sh  setup-oauth-token.sh  setup.sh  start-multi.sh  start-wrappers.sh  stop-wrappers.sh  test-docker-research.sh
config/: ecosystem.config.js
docker/: .env.bedrock  .env.example  .gitignore  docker-compose.bedrock.yml  docker-compose.multi.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  rebuild.sh
docs/: CLAUDE.md  DEFENSIVE_LOGGING.md  DOCKER_USAGE.md  DOCS_PERFORMANCE_THRESHOLDS.md  DOCS_PRODUCTION_LOGGING.md  FEATURE_WRAPPER_FILE_DISCOVERY.md  FILE_DISCOVERY.md  FILE_DISCOVERY_ARCHITECTURE_ANALYSIS.md  HVAC_COOLING_SYSTEM_ANALYSIS_VIENNA.md  HVAC_TECHNICAL_STANDARDS_RESEARCH.md  PHASE_2_HVAC_TECHNICAL_RESEARCH_REPORT.md  RESEARCH_PERMISSION_FIX_SUMMARY.md  RESEARCH_PROGRESS_MONITORING_ANALYSIS.md  SLASH_COMMAND_ROOT_CAUSE_ANALYSIS.md  TURBOCOR_MAGNETIC_BEARING_CHILLER_RESEARCH.md
docs/manual-tasks/: BEDROCK_SETUP.md
scripts/: switch-claude-account.sh
sdk/: README.md
sdk/python/: __init__.py  ai_bridge_client.py  tenant_signing.py
sdk/typescript/: CLAUDE.md  ai-bridge-client.ts  package.json
src/: auth.py  bedrock_service.py  claude_cli.py  gemini_cli.py  hetzner_service.py  main.py  message_adapter.py  model_registry.py  models.py  parameter_validator.py  vision_provider.py
tests/: README_RESEARCH_TEST.md  research_function_test.py  test_privacy_demo.py
(+22 files in other folders)
